background color added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p{color: red;
+            background-color: aqua;
+            width: 500px;
+            }
+            h1{
+                background-color: red;
+                width: 500px;
+            }
+    
+        }
+    </style>
 </head>
 <body>
     <h1> the republic of bangladesh</h1>
